# ParcelTracker

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  hacs.json
backend/: .dockerignore  Dockerfile  config.docker.example.yaml  config.example.yaml  entrypoint.sh  pyproject.toml  tracking-worker-entrypoint.sh  worker-entrypoint.sh
backend/alembic/: env.py
backend/alembic/versions/: 0008b2eb8c6c_add_order_archived_flag.py  1cc82242267c_add_shipment_tracking_registered_flag.py  3474cd4841f1_add_performance_indexes.py  7a3f0c8e2b1d_add_mail_account_oauth_fields.py  9b9125e5196a_initial_schema.py  dbd6be1e4f2f_add_mail_accounts.py
backend/app/: __init__.py  config.py  database.py  main.py  tracking_worker.py  worker.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  crypto.py  logging.py  security.py  version.py
backend/app/models/: __init__.py  base.py  carrier.py  email.py  enums.py  mail_account.py  order.py  shipment.py  user.py
backend/app/repositories/: __init__.py  base.py  carrier_repository.py  email_repository.py  mail_account_repository.py  order_repository.py  shipment_repository.py  user_repository.py
backend/app/schemas/: auth.py  carrier.py  dashboard.py  mail_account.py  notification.py  order.py  shipment.py  statistics.py  system.py  user.py
backend/app/services/: __init__.py  auth_service.py  carrier_service.py  dashboard_service.py  email_ingestion_service.py  exceptions.py  mail_account_service.py  mqtt_publish_service.py  mqtt_publisher_factory.py  notification_dispatch_factory.py  notification_service.py  oauth_google.py  oauth_microsoft.py  order_service.py  shipment_service.py  statistics_service.py  tracking_provider_factory.py  tracking_sync_service.py  user_service.py  version_service.py
backend/tests/: conftest.py
backend/tests/api/: test_auth_api.py  test_mail_accounts_api.py  test_mail_accounts_google_oauth_api.py  test_mail_accounts_oauth_api.py  test_notifications_api.py  test_orders_api.py  test_request_logging.py  test_shipments_api.py  test_statistics_api.py  test_system_api.py
backend/tests/unit/: test_email_ingestion_service.py  test_mail_account_service.py  test_mqtt_publish_service.py  test_notification_and_mqtt_factories.py  test_notification_dispatch_wiring.py  test_notification_service.py  test_oauth_google.py  test_oauth_microsoft.py  test_order_shipment_services.py  test_security.py  test_statistics_service.py  test_tracking_sync_service.py  (+3 more)
importer/: README.md  __init__.py  emails.py  imap_client.py  pyproject.toml
importer/parsers/: __init__.py  _extract.py  _regex_parser.py  aliexpress.py  alternate.py  amazon.py  base.py  decathlon.py  ebay.py  ikea.py  kaufland.py  mediamarkt.py  otto.py  registry.py  saturn.py  temu.py  zalando.py
importer/tests/: conftest.py  test_imap_client.py  test_parsers.py
mqtt/: README.md  __init__.py  publisher.py  pyproject.toml  sensors.py
mqtt/tests/: test_publisher.py
tracking/: README.md  __init__.py  carriers.py  provider.py  pyproject.toml
tracking/providers/: __init__.py  _status_mapping.py  _util.py  aftership.py  factory.py  seventeentrack.py  ship24.py  trackingmore.py
tracking/tests/: test_carriers.py  test_factory.py  test_providers.py
(+87 files in other folders)
