[project]
name = "parcel-server-importer"
version = "0.1.0"
description = "IMAP email import and pluggable merchant confirmation parsing for Parcel Server"
requires-python = ">=3.13"
dependencies = [
    "imapclient>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["importer", "importer.parsers"]
package-dir = { "importer" = "." }

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
