[project]
name = "parcel-server-mqtt"
version = "0.1.0"
description = "MQTT publisher and Home Assistant MQTT Discovery for Parcel Server"
requires-python = ">=3.13"
dependencies = [
    "paho-mqtt>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mqtt"]
package-dir = { "mqtt" = "." }

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
