[project]
name = "parcel-server-tracking"
version = "0.1.0"
description = "Carrier-agnostic tracking provider interface and tracking-number detection for Parcel Server"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tracking", "tracking.providers"]
package-dir = { "tracking" = "." }

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
